# wattmeter-sharp

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  .yamllint  Dockerfile  README.md  config.example.yaml  config.schema  device.example.yaml  device.schema  packet.old  pyproject.toml
.github/workflows/: regression.yaml
data/: metrics.db
doc/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AvailabilityChart.tsx  CommunicationError.module.css  CommunicationErrorChart.tsx  CommunicationErrorTable.tsx  ConnectionStatus.tsx  DeviceGrid.tsx  EnergyRanking.tsx  ErrorMessage.tsx  Footer.tsx  Loading.tsx  PowerNow.tsx  SensorTable.tsx  Skeleton.tsx  Sparkline.tsx  TrendChart.tsx  UnknownDevices.tsx
frontend/src/components/common/: AnimatedNumber.tsx
frontend/src/config/: constants.ts
frontend/src/hooks/: useApi.ts  usePrefersDark.ts
frontend/src/types/: index.ts
frontend/src/utils/: device.ts
react/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
react/src/: App.tsx  index.css  main.tsx
react/src/components/: AvailabilityChart.tsx  CommunicationError.module.css  CommunicationErrorChart.tsx  CommunicationErrorTable.tsx  ErrorMessage.tsx  Footer.tsx  LazyAvailabilityChart.tsx  Loading.tsx  SensorTable.tsx  Skeleton.tsx
react/src/components/common/: AnimatedNumber.tsx
react/src/config/: constants.ts
react/src/hooks/: useApi.ts
react/src/types/: index.ts
src/: healthz.py  sharp_hems_calibrate.py  sharp_hems_dump.py  sharp_hems_logger.py  sharp_hems_server.py  sharp_hems_status.py  webui.py
src/sharp_hems/: config.py  device.py  notify.py  packet_dump.py  serial_pubsub.py  sniffer.py  watchdog.py
src/sharp_hems/metrics/: __init__.py  collector.py
src/sharp_hems/webui/api/: __init__.py  device.py  metrics.py  power.py
src/sharp_hems/webui/webapi/: sensor_stat.py
tests/: conftest.py  test_basic.py  test_features.py  test_metrics.py  test_playwright.py  test_sniffer.py  test_webui_api.py
tests/data/: packet.dump
