[project]
name = "wattmeter-sharp"
dynamic = ["version"]
description = "シャープの HEMS コントローラ JH-AG01 の内部通信を読み取って，電力センサーの計測値を取得するスクリプトです．"
authors = [
    { name = "KIMATA Tetsuya", email = "kimata@green-rabbit.net" }
]
readme = "README.md"
requires-python = ">= 3.11"

dependencies = [
    "docopt-ng>=0.9.0",
    "fluent-logger>=0.11.1",
    "influxdb-client[ciso]>=1.44.0",
    "my-lib @ git+https://github.com/kimata/my-py-lib@382621749920b8c09145ba739335616689bae96d",
    # NOTE: my_lib.notify.slack が PIL を import するが my-lib 側で宣言されていないため明示
    "pillow>=10.0.0",
    "pyzmq>=26.4.0",
    "pyserial>=3.5",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-pydantic>=0.12.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "flaky>=3.8.1",
    "playwright>=1.45.1",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-playwright>=0.5.1",
    "pytest-xdist>=3.6.1",
    "time-machine>=2.15.0",
    "pytest>=8.3.2",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# NOTE: Docker ビルドなど .git が存在しない環境向けのフォールバック
[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[project.scripts]
wattmeter-logger = "sharp_hems_logger:main"
wattmeter-server = "sharp_hems_server:main"
wattmeter-dump = "sharp_hems_dump:main"
wattmeter-status = "sharp_hems_status:main"
wattmeter-calibrate = "sharp_hems_calibrate:main"
wattmeter-healthz = "healthz:main"
wattmeter-webui = "webui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sharp_hems"]

# NOTE: エントリポイント用に、src/ 直下のスクリプトをトップレベルモジュールとして含める
[tool.hatch.build.targets.wheel.force-include]
"src/sharp_hems_logger.py" = "sharp_hems_logger.py"
"src/sharp_hems_server.py" = "sharp_hems_server.py"
"src/sharp_hems_dump.py" = "sharp_hems_dump.py"
"src/sharp_hems_status.py" = "sharp_hems_status.py"
"src/sharp_hems_calibrate.py" = "sharp_hems_calibrate.py"
"src/healthz.py" = "healthz.py"
"src/webui.py" = "webui.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"

addopts = "--verbose --timeout=120 --durations=10 --log-file-level=DEBUG --log-format=\"%(asctime)s %(levelname)s [%(filename)s:%(lineno)s %(funcName)s] %(message)s\" --capture=sys --html=tests/evidence/index.htm --self-contained-html --cov=src --cov-report=html"

testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:multiprocessing\\.popen_fork"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",

  # 以下，未使用関数
]

[tool.coverage.html]
directory = "tests/evidence/coverage"

[tool.ruff.lint]
ignore = ["D203"]
